<resources>
    <string name="app_name">Safe Ride</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="register">Cadastrar</string>
    <string name="signin">Entrar</string>
    <string name="title_activity_new_route">Map</string>

    <string name="pedir_carona">Pedir Carona</string>
    <string name="adicionar_rota">Adicionar Rota</string>
    <string name="minhas_rotas">Minhas Rotas</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="name">Nome</string>
    <string name="back">Voltar</string>
    <string name="offerRide">Você deseja oferecer carona?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="carModel">Modelo do Carro</string>
    <string name="plate">Placa</string>
    <string name="color">Cor</string>
    <string name="register_failed">Seu login falhou</string>
    <string name="from">De</string>
    <string name="to">Para</string>
    <string name="time">Hora</string>
    <string name="login_failed">Seu login falhou</string>
    <string name="forWhere">Para onde?</string>
    <string name="logout">Sair</string>
    <string name="loading">Carregando...</string>
    <string name="pedidos_carona">Pedidos de Carona</string>
    <string name="phone">Telefone</string>
    <string name="no_rides">Nenhum resultado</string>
    <string name="success">Enviado com sucesso</string>
</resources>
