<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navPedirCarona"
            android:icon="@drawable/ic_directions_car_black_24dp"
            android:title="@string/pedir_carona" />
        <item
            android:id="@+id/navAdicionarRota"
            android:icon="@drawable/ic_add_location_black_24dp"
            android:title="@string/adicionar_rota" />
        <item
            android:id="@+id/navRequests"
            android:icon="@drawable/ic_explore_black_24dp"
            android:title="@string/pedidos_carona" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_input_black_24dp"
            android:title="@string/logout" />
    </group>

</menu>
